<resources>
    <string name="app_name">Memorina</string>
    <string name="label_count_cards">Количество карт :</string>
    <string name="label_timeout">Задержка :</string>
    <string name="button_label_apply">Применить</string>
    <string name="label_score">Счёт:</string>
    <string name="label_your_score">Ваш счёт:</string>
    <string name="label_win">Победа!</string>
    <string name="label_new_game">Новая игра</string>
    <string name="label_settings">Настройки</string>
    <string name="label_exit">Выход</string>
    <string name="label_game_name">МЕМОРИНА</string>
</resources>