<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:scaleType="centerInside"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/space_circle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/space_circle_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:paddingBottom="40dp"
                android:textSize="56sp"
                android:gravity="bottom"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/label_game_name"
                tools:ignore="RtlCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp"
                    android:textSize="42sp"
                    android:padding="5dp"
                    android:onClick="onClickNewGame"
                    android:textAlignment="center"
                    android:text="@string/label_new_game"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginBottom="20dp"
                    android:textSize="42sp"
                    android:padding="5dp"
                    android:onClick="onClickSettings"
                    android:textAlignment="center"
                    android:text="@string/label_settings"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="42sp"
                    android:padding="5dp"
                    android:onClick="onClickExit"
                    android:textAlignment="center"
                    android:text="@string/label_exit"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>